fix: collapse link for arabic language.
git-svn-id: https://win-lhoa5a3q3i7/svn/front-end-backup/trunk@5066 3f25d8b1-e65f-8d48-bd54-75b34d8be7f1

--- a/src/modules/accordion-module/css/_accordion-style-rtl.scss
+++ b/src/modules/accordion-module/css/_accordion-style-rtl.scss
@@ -20,7 +20,7 @@ html.rtl {
   .accordion-title {
     padding-left:40px;
     padding-right:0;
-    button {
+    a {
       left: 0;
       right:auto;
     }
