--- a/src/modules/accordion-module/css/accordion-style.scss
+++ b/src/modules/accordion-module/css/accordion-style.scss
@@ -114,8 +114,8 @@ accordion-content {
   padding-right: 40px;
 
   a.md-icon-button {
-    width: 40px;
-    height: 40px;
+    width: 24px;
+    height: 24px;
     position: absolute;
     right: 0;
     top: 2px;
